--- a/src/sass/registered.scss
+++ b/src/sass/registered.scss
@@ -9,13 +9,14 @@ body {
 		display:flex;
 		width: 100%;
 		height: 100vh;
+		overflow: hidden;
 		&-block:first-of-type {		
 			width: 60%;
 			background: linear-gradient(-23deg, #5449b6 0%, #6ba8dc 100%);
 			position: relative;
 			height: auto;
 			.half-circle {
-				height: 100%;
+				height: 103%;
 			    width: 70px;
 			    position: absolute;
 			    right: 0;
@@ -34,7 +35,7 @@ body {
 				}
 			.help {
 				max-width: 970px;
-				max-height: 400px;
+				min-height: 400px;
 				margin: 0 auto;
 				margin-top: 25%;
 				text-align: center;
@@ -535,7 +536,7 @@ body {
 					
 				}
 				.help {
-					max-height: 800px;
+					min-height: 800px;
 					margin-top: 70%;
 					.top {
 						p {
@@ -562,7 +563,7 @@ body {
 			&-block:last-of-type {
 				height: 100%;
 				.welcome {
-					max-height: 1024px;
+					min-height: 960px;
 					padding: 30px;
 					margin-top: 70%;
 					i.fas {
@@ -614,4 +615,20 @@ body {
 			}
 		}
 	}
+}
+@media screen and  (min-width: 1025px) and (max-width: 1800px) {
+	body {
+		.container {
+			&-block:first-of-type {
+				.help {
+					margin-top: 50%;
+				}
+			}
+			&-block:last-of-type {
+				.welcome {
+					margin-top: 50%;
+				}
+			}		
+		}		
+}
 }
